fix: topbar overlap on small screen

--- a/src/tw-whiteboard/components/App.css
+++ b/src/tw-whiteboard/components/App.css
@@ -8,7 +8,6 @@
 
 .tw-whiteboard-tldraw-container button:not(.tc-btn-invisible) {
   /* padding: unset; */
-  margin: unset;
   border-radius: unset;
   background-color: unset;
 }
